added search fanctionality

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
                 <h3>API is a damn good <span>javaScript</span> constructs mode that makes working with js a lot of fun!</h3>
                 <p>lets get started with a user search!</p>
                 <form class="search__persons" action="index.html" onsubmit="preventSubmit(event)">
-                    <input id='search__persons--input' type="text" placeholder="Search Persons..." onkeyup="searchpersons()">
+                    <input id='search__persons--input' type="text" placeholder="Search Persons...">
                 </form>
                 <h2 class="persons__title"> -- Random Users API --</h2>
             </div>
